--- a/fcc-test-suite-template/index.html
+++ b/fcc-test-suite-template/index.html
@@ -22,7 +22,7 @@
 
     -->
     <p>
-      Hello World!
+      Hello World, we are software developers!
     </p>
     <script  src="js/index.js"></script>
   </body>
