--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <p>
       Hello World, we are software developers!
     </p>
-    <script  src="js/index.js"></script>
+    <script  src="js"></script>
   </body>
 </html>
